[gd_scene load_steps=5 format=3 uid="uid://ceoidim7kw56n"]

[ext_resource type="Texture2D" uid="uid://dqaxsyyfdh4pe" path="res://data/Pole.png" id="1_1buxd"]
[ext_resource type="Script" path="res://scripts/pole.gd" id="1_3fass"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmhqu"]
size = Vector2(53, 338)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3uwla"]
size = Vector2(2.66667, 20.5)

[node name="Pole" type="Node2D" groups=["poles"]]
position = Vector2(296, 0)
script = ExtResource("1_3fass")

[node name="Top" type="Area2D" parent="."]
position = Vector2(0, 40)
rotation = 3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2(-2, 0)
shape = SubResource("RectangleShape2D_rmhqu")

[node name="Sprite2D" type="Sprite2D" parent="Top"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_1buxd")

[node name="Bottom" type="Area2D" parent="."]
position = Vector2(0, 472)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_rmhqu")

[node name="Sprite2D" type="Sprite2D" parent="Bottom"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_1buxd")

[node name="Middle" type="Area2D" parent="."]
position = Vector2(0, 256)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Middle"]
position = Vector2(30, 1)
scale = Vector2(3, 4)
shape = SubResource("RectangleShape2D_3uwla")

[connection signal="body_entered" from="Top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="Bottom" to="." method="_on_bottom_body_entered"]
[connection signal="body_entered" from="Middle" to="." method="_on_middle_body_entered"]
